--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,8 @@ dependencies {
     implementation 'com.android.support:design:28.1.0'
 
     // groupie recycleview
-    implementation "com.xwray:groupie:2.1.0"
+//    implementation "com.xwray:groupie:2.1.0"
+    implementation "com.xwray:groupie:2.7.0"
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
